Changed player storage structure to dictionary, built dialogue UI and system, players can now select roles simultainously, with the room being loaded once all roles are selected

--- a/room-select.html
+++ b/room-select.html
@@ -50,7 +50,8 @@
                 
                 // Create room cards
                 availableRooms.forEach(room => {
-                    const playerCount = room["roomPlayers"] ? room["roomPlayers"].length : 0;
+                    const playersArray = room["roomPlayers"] ? Object.values(room["roomPlayers"]) : [];
+                    const playerCount = playersArray.length;
                     const canJoin = playerCount < 4;
                     
                     const roomCard = document.createElement("div");
