--- a/story/situation-room.html
+++ b/story/situation-room.html
@@ -39,7 +39,7 @@
         const localUserId = localStorage.getItem("connectedUserId");
         const roomName = localStorage.getItem("connectedRoomName");
         const username = localStorage.getItem("connectedUsername");
-        //const roomData = JSON.parse(localStorage.getItem("roomData") || "{}");
+        const userRole = localStorage.getItem("connectedUserRole");
 
         // Check for duplicate roles
         let hasDuplicateRoles = false;
