Added back to situation room button to all subrooms, added handle dialogue functionality to all sub rooms

--- a/story/rooms/developer-hub.html
+++ b/story/rooms/developer-hub.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <button class="back-button" onclick="window.location.href='../situation-room'">← Back</button>
+    <button class="back-button" onclick="window.location.href='../situation-room'">← Back to Situation Room</button>
     <!-- Game Info Display -->
     <div id="gameInfo" class="game-info">
         <div id="roomName">Room: Loading...</div>
@@ -23,12 +23,12 @@
     <div class="menu-container">
         <h1 id="lobbyHeader">Developer Hub</h1>
         <!--<h2 id="lobbySubheader">Pick a room to explore</h2>-->
-        <div class="button-container">
+        <!--<div class="button-container">
             <button id="serverBtn" class="std-button role-button" style="width: 250px; max-width: 100%;" onclick="window.location.href='server-room.html'">Server Room</button>
             <button id="researchBtn" class="std-button role-button" style="width: 250px;" onclick="window.location.href='research-lab.html'">Research Lab</button>
             <button id="commandBtn" class="std-button role-button" style="width: 250px; max-width: 100%;" onclick="window.location.href='command-centre.html'">Command Centre</button>
             <button id="developerBtn" class="std-button role-button" style="width: 250px;" onclick="window.location.href='developer-hub.html'">Developer Hub</button>
-        </div>
+        </div>-->
     </div>
 
     <script type="module">
