--- a/create-room.html
+++ b/create-room.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Room - Athena</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="data:,">
 </head>
 <body>
     <button class="back-button" onclick="window.location.href='index.html'">← Back</button>
