--- a/story/finalise-roles.html
+++ b/story/finalise-roles.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Athena</title>
     <link rel="stylesheet" href="../styles.css">
-
+    <link rel="icon" href="data:,">
 </head>
 <body>
     <!-- Game Info Display -->
