--- a/story/situation-room.html
+++ b/story/situation-room.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Athena</title>
     <link rel="stylesheet" href="../styles.css">
-
+    <link rel="icon" href="data:,">
 </head>
 <body>
     <!-- Game Info Display -->
@@ -23,17 +23,15 @@
         <h1 id="lobbyHeader">Situation Room</h1>
         <h2 id="lobbySubheader">Pick a room to explore</h2>
         <div class="button-container">
-            <div class="button-container">
-                <button id="serverBtn" class="std-button role-button" style="width: 250px; max-width: 100%;" onclick="window.location.href='rooms/server-room.html'">Server Room</button>
-                <button id="researchBtn" class="std-button role-button" style="width: 250px;" onclick="window.location.href='rooms/research-lab.html'">Research Lab</button>
-                <button id="commandBtn" class="std-button role-button" style="width: 250px; max-width: 100%;" onclick="window.location.href='rooms/command-centre.html'">Command Centre</button>
-                <button id="developerBtn" class="std-button role-button" style="width: 250px;" onclick="window.location.href='rooms/developer-hub.html'">Developer Hub</button>
-            </div>
+            <button id="serverBtn" class="std-button role-button" style="width: 250px;" onclick="window.location.href='rooms/server-room.html'">Server Room</button>
+            <button id="researchBtn" class="std-button role-button" style="width: 250px;" onclick="window.location.href='rooms/research-lab.html'">Research Lab</button>
+            <button id="commandBtn" class="std-button role-button" style="width: 250px;" onclick="window.location.href='rooms/command-centre.html'">Command Centre</button>
+            <button id="developerBtn" class="std-button role-button" style="width: 250px;" onclick="window.location.href='rooms/developer-hub.html'">Developer Hub</button>
         </div>
     </div>
 
     <script type="module">
-        import { updatePlayer, listenToRoom } from "../main.js";
+        import { updatePlayer, listenToRoom, updateRoleList } from "../main.js";
         import TypewriterDialogue from "../typewriter.js";
 
         // Get room data from localStorage
@@ -56,41 +54,44 @@
                 document.getElementById("playerCount").textContent = `Players: ${playersArray.length}/4`;
                 document.getElementById("yourName").textContent = `You: ${username}`;
             }
-
-            // Update role list
-            const playersList = document.getElementById("players");
-            playersList.innerHTML = "";
-            
-            if (roomData && roomData["roomPlayers"]) {
-                // Display player list
-                Object.entries(roomData["roomPlayers"]).forEach(([playerId, player]) => {
-                    const li = document.createElement("li");
-                    const roleNames = {
-                        'ds': 'Data Scientist',
-                        'se': 'Software Engineer',
-                        'ne': 'Network Engineer',
-                        'ca': 'Cybersecurity Analyst'
-                    };
-                    const roleName = roleNames[player["role"]] || 'Unassigned';
-                    li.textContent = `${player["name"]} - ${roleName}`;
-                    if (playerId === localUserId) {
-                        li.classList.add("current-player");
-                        li.style.fontWeight = "bold";
-                        li.style.color = "#4CAF50";
-                    }
-                    playersList.appendChild(li);
-                });
-            }
         }
 
         function handleDialogue(roomData) {
-            if (isInitialLoad) {
-                typewriter.showSequence([
-                    "Welcome, team, to the situation room.",
-                    "From here, you can access these four rooms which may contain what you need to fix this.",
-                    "Good luck, and don't be afraid to ask for help if you need it."
-                ]);
-            }                   
+            const currentDay = roomData["currentDay"]
+            // Show initial dialogue for each day
+            if (localStorage.getItem("introDialogueSeen") !== "1") {
+                switch (currentDay) {
+                case 1:
+                    typewriter.showSequence([
+                        "Welcome, team, to the situation room.",
+                        "From here, you can access these four rooms which may contain what you need to fix this.",
+                        "Good luck, and don't be afraid to ask for help if you need it."
+                    ]);
+                    break;
+                case 2:
+                    typewriter.showSequence([
+                        "Day 2 welcome dialogue."
+                    ]); 
+                    break;
+                case 3:
+                    typewriter.showSequence([
+                        "Day 3 welcome dialogue."
+                    ]);
+                    break;
+                case 4:
+                    typewriter.showSequence([
+                        "Day 4 welcome dialogue."
+                    ]); 
+                    break;
+                default:
+                    typewriter.showSequence([
+                        "You're not supposed to see this.",
+                        "I guess you guys really are the best..."
+                    ])
+                }
+            }
+            // Ensure the intro dialogue is not replayed
+            localStorage.setItem("introDialogueSeen", "1")                      
         }
 
         // Set up real-time listener for game info updates
@@ -99,15 +100,8 @@
                 console.log("Room updated.");
                 currentRoomData = roomData;
                 updateGameInfo(roomData);
-
-                if (isInitialLoad) {
-                    handleDialogue(roomData);
-                    isInitialLoad = false;
-                }
-                /*else if (isRoleReassignmentLoad) {
-                    handleRoleReasignmentDialogue(roomData)
-                    isRoleReassignmentLoad = false;
-                }*/
+                updateRoleList(roomData, document.getElementById("players"));
+                handleDialogue(roomData);
             } else {
                 console.error("Room not found");
                 window.location.href = "../index.html";
@@ -118,12 +112,12 @@
         //updateGameInfo({ roomName: roomName, roomPlayers: roomData.roomPlayers });
 
         // Show welcome dialogue when page loads
-        document.addEventListener('DOMContentLoaded', () => {
+        /*document.addEventListener('DOMContentLoaded', () => {
             typewriter.showSequence([
                 "Welcome to the situation room.",
                 "Please pick a room to explore."
             ]);
-        });
+        });*/
 
         // Start game button listener
         /*document.getElementById("startGameBtn").addEventListener("click", () => {
