Puzzles are now displayed on the screen when the user clicks the correct action, action dialogue is now dynamically decided based on if the room is actionable for the user at that time or not

--- a/story/rooms/command-centre.html
+++ b/story/rooms/command-centre.html
@@ -80,7 +80,7 @@
 
             // If nothing has been returned, that means the user is in the wrong room
             if (dialogueToShow === null) {
-                typewriter.showSequence(dialogue["wrong-room"]);
+                typewriter.showSequence(dialogue["WRONG-ROOM"]);
             }
             // Otherwise, show the dialogue
             else {
@@ -115,7 +115,15 @@
                 currentRoomData = roomData;
                 updateGameInfo(roomData);
                 updateRoleList(roomData, document.getElementById("players"));
-                generateActions(roomData["currentDay"], "command-centre", localStorage.getItem("connectedUserRole"), document.getElementById("availableActions"));
+
+                // Load in actions this role can do during this run
+                generateActions(
+                    roomData, 
+                    "command-centre", 
+                    localStorage.getItem("connectedUserRole"), 
+                    document.getElementById("availableActions")
+                );
+
                 handleDialogue();
 
                 /*if (isInitialLoad) {
