--- a/story/rooms/developer-hub.html
+++ b/story/rooms/developer-hub.html
@@ -77,7 +77,7 @@
 
             // If nothing has been returned, that means the user is in the wrong room
             if (dialogueToShow === null) {
-                typewriter.showSequence(dialogue["wrong-room"]);
+                typewriter.showSequence(dialogue["WRONG-ROOM"]);
                 return;
             }
             // If the user has an enabler task in here
@@ -110,7 +110,15 @@
                 currentRoomData = roomData;
                 updateGameInfo(roomData);
                 updateRoleList(roomData, document.getElementById("players"));
-                generateActions(roomData["currentDay"], "developer-hub", localStorage.getItem("connectedUserRole"), document.getElementById("availableActions"));
+                
+                // Load in actions this role can do during this run
+                generateActions(
+                    roomData, 
+                    "developer-hub", 
+                    localStorage.getItem("connectedUserRole"), 
+                    document.getElementById("availableActions")
+                );
+
                 handleDialogue();
                 
 
